feat: enforce strict Talon import template